--- a/helm/templates/devops-toolkit.yaml
+++ b/helm/templates/devops-toolkit.yaml
@@ -14,9 +14,9 @@ spec:
     helm:
       values: |
         image:
-          tag: latest
+          tag: 2.9.17
         ingress:
-          host: devopstoolkitseries.com
+          host: devops-toolkit.20.72.165.77.xip.io
       version: v3
   destination:
     namespace: production
